--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,3 +26,14 @@
 
  @import "bootstrap/scss/bootstrap";
 
+ body {
+  padding-top: 90px;
+}
+
+.base-container {
+  @extend .container-fluid;
+  max-width: var(--breakpoint-lg);
+  width: 80%;
+  margin: 0 auto;
+  max-width: 500px;
+}
