--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,9 +1,46 @@
-<% if user_signed_in? %>
-  <%# ログイン時 %>
-  <%= link_to "アカウント編集", edit_user_registration_path %>
-  <%= link_to "ログアウト", destroy_user_session_path, method: :delete, data: { confirm: "ログアウトしますか？" } %>
-<% else %>
-  <%# 非ログイン時 %>
-  <%= link_to "新規登録", new_user_registration_path %>
-  <%= link_to "ログイン", new_user_session_path %>
-<% end %>
+<nav class="navbar fixed-top navbar-expand-md navbar-dark text-white bg-primary">
+  <a class="navbar-brand" href="#">
+    <%= link_to image_tag("yanbaru_expert_logo.png"), root_path %>
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav">
+
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Ruby
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <%= link_to 'Ruby/Railsテキスト教材', texts_path, class: "dropdown-item" %>
+          <%= link_to 'Ruby/Rails動画教材', movies_path, class: "dropdown-item" %>
+        </div>
+      </li>
+
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          PHP
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <%= link_to 'PHPテキスト教材', texts_path(genre: "php"), class: "dropdown-item" %>
+          <%= link_to 'PHP動画教材', movies_path(genre: "php"), class: "dropdown-item" %>
+        </div>
+      </li>
+      
+
+      <li class="nav-item">
+        <% if user_signed_in? %>
+          <%# ログイン時 %>
+          <li><%= link_to "アカウント編集", edit_user_registration_path, class: "nav-link text-white" %></li>
+          <li><%= link_to "ログアウト", destroy_user_session_path, class: "nav-link text-white", method: :delete, data: { confirm: "ログアウトしますか？" } %></li>
+        <% else %>
+          <%# 非ログイン時 %>
+          <li><%= link_to "新規登録", new_user_registration_path, class: "nav-link text-white" %></li>
+          <li><%= link_to "ログイン", new_user_session_path, class: "nav-link text-white" %></li>
+        <% end %>
+      </li>
+      
+    </ul>
+  </div>
+</nav>
