scssの必要箇所を再入力

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,7 +8,18 @@
   margin: 0 auto;
   padding: 1rem;
   width: 80%;
+}
 
+.mw-md {
+  max-width: 768px;
+}
+
+.mw-lg {
+  max-width: 992px;
+}
+
+.mw-xl {
+  max-width: 1200px;
 }
 
 
