<%= render layouts/header %>を追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   </head>
   <body>
     <header>
+      <%= render "layouts/header" %>
     </header>
     <main>
       <div class="base-container <%= max_width %>">
