--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,10 @@
   </head>
   <body>
     <header>
+      <%= render "layouts/header" %>
     </header>
     <main>
+      <%= render "layouts/flash" %>
       <div class="base-container <%= max_width %>">
         <%= yield %>
       </div>
