--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -25,6 +25,10 @@
   <div class="form-group">
     <%= f.submit t('.sign_up'), class: 'btn btn-primary btn-block' %>
   </div>
+
 <% end %>
 
-<%= render 'devise/shared/links' %>
+<div class="button">
+  <%= render 'devise/shared/links' %>
+</div>
+
