--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,13 @@
   </head>
   <body>
     <header>
+    
     </header>
     <main>
       <%= render "layouts/flash" %>
       <div class="base-container <%= max_width %>">
         <%= yield %>
+        <%= render "layouts/movie" %>
       </div>
     </main>
     <footer>
