--- a/app/views/texts/_text.html.erb
+++ b/app/views/texts/_text.html.erb
@@ -1,9 +1,15 @@
- <div class="card" style="width: 20rem;">
-      <%= image_tag("no_image.jpg") %>
-      <div class="card-body">
-        <a href="#" class="btn btn-secondary">読破済みにする</a>
-        <h4 class="card-title"><%= text.title %></h4>
-        <p class="card-text">【<%= text.genre %>】</p>
-        
+
+<div class="row row-cols-1 row-cols-md-2 g-4">
+  <div class="col">
+    <div class="card h-100">
+      <div class="card">
+        <%= image_tag("no_image.jpg") %>
+        <div class="card-body">
+          <a href="#" class="btn btn-secondary btn-brock">読破済みにする</a>
+          <h4 class="card-title"><%= text.title %></h4>
+          <p class="card-text">【<%= text.genre %>】</p>
+        </div>
       </div>
     </div>
+  </div>
+</div>
