--- a/app/assets/stylesheets/texts.scss
+++ b/app/assets/stylesheets/texts.scss
@@ -1,6 +1,16 @@
 .text-title {
   text-align: center;
 }
+.card-content {
+  height: 370px;
+  max-width: 376px;
+  margin: 0 auto;
+}
+
+.p {
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
 
 .btn-brock {
   display: block;
