--- a/app/views/texts/_text.html.erb
+++ b/app/views/texts/_text.html.erb
@@ -1,13 +1,13 @@
 
 <div class="row row-cols-1 row-cols-md-2 g-4">
   <div class="col">
-    <div class="card h-100">
+    <div class="card h-100 card-content">
       <div class="card">
         <%= image_tag("no_image.jpg") %>
         <div class="card-body">
           <a href="#" class="btn btn-secondary btn-brock">読破済みにする</a>
-          <h4 class="card-title"><%= text.title %></h4>
-          <p class="card-text">【<%= text.genre %>】</p>
+          <p class="card-text"><%= text.title %></p>
+          【<%= text.genre %>】
         </div>
       </div>
     </div>
