レスポンシブ対応

--- a/app/views/texts/index.html.erb
+++ b/app/views/texts/index.html.erb
@@ -1,4 +1,7 @@
-<div class="text-title">
-  <h1>Ruby/Railsテキスト教材</h1>
+<h1 class="text-title">Ruby/Railsテキスト教材</h1>
+<div class="container">
+  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
+
+      <%= render @texts %>
+  </div>
 </div>
-<%= render @texts %>
