--- a/app/assets/stylesheets/texts.scss
+++ b/app/assets/stylesheets/texts.scss
@@ -1,17 +1,10 @@
 .text-title {
   text-align: center;
 }
-.card-content {
-  height: 370px;
-  max-width: 376px;
-  margin: 0 auto;
+.card {
+  height: 300px;
+  max-width: 50px;
 }
-
-.p {
-  margin-top: 0;
-  margin-bottom: 1rem;
-}
-
 .btn-brock {
   display: block;
   width: 100%;
