--- a/app/views/texts/index.html.erb
+++ b/app/views/texts/index.html.erb
@@ -1,7 +1,12 @@
-<h1 class="text-title">Ruby/Railsテキスト教材</h1>
-<div class="container">
+<div class="base-container mw-xl"> 
+  <h1 class="text-center mt-2 mb-4">
+    Ruby/Rails
+    <br class="d-sm-none">
+    テキスト教材
+  </h1>
   <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
-
+    
       <%= render @texts %>
+
   </div>
 </div>
