--- a/app/assets/stylesheets/texts.scss
+++ b/app/assets/stylesheets/texts.scss
@@ -1,9 +1,23 @@
-.text-title {
-  text-align: center;
+.mw-xl {
+  max-width: 1200px;
 }
+.base-container {
+  margin: 0 auto;
+  padding: 1rem;
+}
+
+.row {
+  display: flex;
+  flex: 1 0 100%;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
+}
+
 .card {
-  height: 300px;
-  max-width: 50px;
+  height: 370px;
+  max-width: 376px;
+  margin: 0 auto;
 }
 .btn-brock {
   display: block;
