--- a/app/views/texts/_text.html.erb
+++ b/app/views/texts/_text.html.erb
@@ -1,10 +1,8 @@
-
-
-  <div class="card">
-    <%= image_tag("no_image.jpg") %>
-    <div class="card-body">
-      <a href="#" class="btn btn-secondary btn-brock">読破済みにする</a>
-      <p class="card-text"><%= text.title %></p>
-      【<%= text.genre %>】
-    </div>
-  </div> 
+<div class="card border-dark mb-3">
+  <%= image_tag("no_image.jpg") %>
+  <div class="card-body">
+    <a href="#" class="btn btn-secondary btn-brock">読破済みにする</a>
+    <p class="card-text"><%= text.title %></p>
+    【<%= text.genre %>】
+  </div>
+</div>
