Embedsアスペクト比の追加

--- a/app/views/movies/_movie.html.erb
+++ b/app/views/movies/_movie.html.erb
@@ -1,6 +1,8 @@
 <div class="col">
-  <div class="card" >
-    <%= embed_youtube(movie.url) %>
+  <div class="card" style="width: 23rem;">
+    <div class="embed-responsive embed-responsive-21by9">
+     <iframe class="embed-responsive-item" src= <%= (movie.url) %> frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
     <div style="text-align: center">
       <a href="#" class="btn btn-primary">読破済みにする</a>
       <br>
