--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -3,7 +3,7 @@
 </div>
 
 <div class="col">
-  <div class="row row-cols-xs-1 row-cols-sm-2 row-cols-md-3">
+  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
     <%= render @movies %>
   </div>
 </div>
