横並び表示に変更

--- a/app/views/texts/index.html.erb
+++ b/app/views/texts/index.html.erb
@@ -4,5 +4,7 @@
     <br class="d-sm-none">
     テキスト教材
   </h1>
-  <%= render @texts %>
+  <div class="row">
+    <%= render @texts %>
+  </div>
 </div>
