--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -2,9 +2,8 @@
   <h1>Ruby/Rails 動画</h1>
 </div>
 
-<div class="col">
-  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
-    <%= render @movies %>
-  </div>
+<div class="row">
+  <%= render @movies %> 
 </div>
+
 
