--- a/app/views/texts/_text.html.erb
+++ b/app/views/texts/_text.html.erb
@@ -1,7 +1,7 @@
 <div class="col-12 col-md-6 col-lg-4">
   <%= link_to text_path(text) do %>
   <div class="card content-card border-dark mb-3">
-    <%= image_tag("no_image.jpg") %>
+    <%= image_tag("no_image.jpg", class: "img-fluid") %>
     <div class="card-body">
       <a href="#" class="btn btn-secondary btn-block">読破済みにする</a>
       <p class="card-text"><%= text.title %></p>
