--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -38,6 +38,7 @@
           <%# 非ログイン時 %>
           <li><%= link_to "新規登録", new_user_registration_path, class: "nav-link text-white" %></li>
           <li><%= link_to "ログイン", new_user_session_path, class: "nav-link text-white" %></li>
+          <li><%= link_to "ゲストログイン(閲覧用)", users_guest_sign_in_path, method: :post, class: "nav-link text-white" %></li>
         <% end %>
       </li>
       
