パラメータ変更に伴うタイトル変更の実装

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
       <%= render "layouts/flash" %>
       <div class="base-container <%= max_width %>">
         <%= yield %>
+        <title><%= full_title(yield(:title)) %></title>
       </div>
     </main>
     <footer>
