--- a/app/views/texts/_text.html.erb
+++ b/app/views/texts/_text.html.erb
@@ -4,7 +4,11 @@
   <div class="card content-card border-dark mb-3">
     <%= image_tag("no_image.jpg", class: "img-fluid") %>
     <div class="card-body">
-      <a href="#" class="btn btn-secondary btn-block">読破済みにする</a>
+      <% if text.read_progressed_by?(current_user) %>
+        <%= render "progress", text: text %>
+      <% else %>
+        <%= render "disprogress", text: text %>
+      <% end %>
       <p class="card-text"><%= text.title %></p>
       【<%= text.genre_i18n %>】
     </div>
