非同期処理の実装

--- a/app/views/texts/_text.html.erb
+++ b/app/views/texts/_text.html.erb
@@ -4,13 +4,15 @@
   <div class="card content-card border-dark mb-3">
     <%= image_tag("no_image.jpg", class: "img-fluid") %>
     <div class="card-body">
-      <% if text.read_progressed_by?(current_user) %>
-        <%= render "progress", text: text %>
-      <% else %>
-        <%= render "disprogress", text: text %>
-      <% end %>
-      <p class="card-text"><%= text.title %></p>
-      【<%= text.genre_i18n %>】
+      <p id="text-<%= text.id %>">
+        <% if text.read_progressed_by?(current_user) %>
+          <%= render "progress", text: text %>
+        <% else %>
+          <%= render "disprogress", text: text %>
+        <% end %>
+      </p>
+        <p class="card-text"><%= text.title %></p>
+        【<%= text.genre_i18n %>】
     </div>
   </div>
   <% end %>
