--- a/app/views/texts/_disprogress.html.erb
+++ b/app/views/texts/_disprogress.html.erb
@@ -1,1 +1,1 @@
-<%= link_to "読破済みにする", text_read_progresses_path(text),class: "btn btn-block btn-secondary",method: :create %>
+<%= link_to "読破済みにする", text_read_progresses_path(text),class: "btn btn-block btn-secondary",method: :post, remote: true %>
