指定箇所の修正

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,6 +1,6 @@
 <div class= RAILS_GENRE_LIST_title>
   <div style="text-align: center">
-    <h1><%= full_title(base_title = "")%></h1>
+    <h1><%= full_title %></h1>
   </div>
 </div>
 
