PHPテキストを表示

--- a/app/views/texts/index.html.erb
+++ b/app/views/texts/index.html.erb
@@ -1,8 +1,7 @@
 <div class="base-container mw-xl"> 
   <h1 class="text-center mt-2 mb-4">
-    Ruby/Rails
+    <%= text_full_title %>
     <br class="d-sm-none">
-    テキスト教材
   </h1>
   <div class="row">
     <%= render @texts %>
