--- a/app/views/movies/_movie.html.erb
+++ b/app/views/movies/_movie.html.erb
@@ -4,10 +4,15 @@
       <%= embed_youtube(movie.url) %>
     </div>
     <div class="card-body">
-      <a href="#" class="btn btn-secondary btn-block">視聴済みにする</a>
+      <p id="movie-<%= movie.id %>">
+        <% if movie.watch_progressed_by?(current_user) %>
+          <%= render "watch_progress", movie: movie %>
+        <% else %>
+          <%= render "dis_watch_progress", movie: movie %>
+        <% end %>
+      </p>
       <br>
     </div>
     <p class="card-title"><%= "Lv.#{movie_counter +1 } :" %><%= movie.title %></p>
   </div>
 </div>
-  
