--- a/app/views/movies/_movie.html.erb
+++ b/app/views/movies/_movie.html.erb
@@ -7,7 +7,7 @@
       <a href="#" class="btn btn-secondary btn-block">視聴済みにする</a>
       <br>
     </div>
-    <p class="card-title"><%= "Lv.#{movie_counter +1 } :" %><%= movie.title %></p>
+    <p class="card-title"><%= "Lv.#{movie_counter + @movies.offset_value + 1}:" %><%= movie.title %></p>
   </div>
 </div>
   
