ボタンの文言を修正

--- a/app/views/movies/_dis_watch_progress.html.erb
+++ b/app/views/movies/_dis_watch_progress.html.erb
@@ -1,1 +1,1 @@
-<%= link_to '視聴済みを解除', movie_watch_progresses_path(movie), method: :post, remote: true, class: "btn btn-primary btn-block" %>
+<%= link_to '視聴済みにする', movie_watch_progresses_path(movie), method: :post, remote: true, class: "btn btn-secondary btn-block" %>
